--- a/core/templates/inversionpiechart.html
+++ b/core/templates/inversionpiechart.html
@@ -332,7 +332,7 @@
             </div>
             <div id="detail-1" class="container">
                 <div class="row">
-                    <div class="col-md-offset-4 col-md-5 table-responsive">
+                    <div class="col-md-offset-3 col-md-6 table-responsive">
                         <table class="table table-condensed table-striped pma-bg-white">
                             <thead class="thead-inverse">
                             <tr class="bg-primary">
@@ -415,7 +415,10 @@
     <div class="container wide">
         <div class="row">
             <div class="col-md-12">
-                <h2><strong>Modificaciones al presupuesto</strong> municipal de inversiones</h2>
+                <h2>
+                    <strong>Modificaciones al presupuesto</strong>
+                    municipal de inversiones
+                </h2>
                 <h4>Millones de c&oacute;rdobas corrientes </h4>
                 <hr class="pma-line-3"/>
             </div>
@@ -444,9 +447,9 @@
                         <tr>
                             <td class="text-left">{{ row.catinversion__nombre }}</td>
                             <td class="text-center">{{ row.inicial_asignado|million|intcomma }}</td>
-                            <td class="text-center"></td>
+                            <td class="text-center">{{ row.ini_asig_porcentaje }}%</td>
                             <td class="text-center">{{ row.actualizado_asignado|million|intcomma }}</td>
-                            <td class="text-center"></td>
+                            <td class="text-center">{{ row.act_porcentaje }}</td>
                             <td class="text-center">
                                 {% if row.final_ejecutado %}
                                     {{ row.final_ejecutado|million|intcomma }}
@@ -454,17 +457,17 @@
                                     0
                                 {% endif %}
                             </td>
-                            <td class="text-center"></td>
+                            <td class="text-center">{{ row.ejec_porcentaje }}%</td>
                         </tr>
                     {% endfor %}
                     <tr class="bold">
                         <td>TOTAL</td>
                         <td class="text-center">{{ cat|total_sum:'inicial_asignado'|million|intcomma }}</td>
-                        <td class="text-center"></td>
+                        <td class="text-center">{{ asignado_porcentaje }}%</td>
                         <td class="text-center">{{ cat|total_sum:'actualizado_asignado'|million|intcomma }}</td>
-                        <td class="text-center"></td>
+                        <td class="text-center">{{ actualizado_porcentaje }}%</td>
                         <td class="text-center">{{ cat|total_sum:'final_ejecutado'|million|intcomma }}</td>
-                        <td class="text-center"></td>
+                        <td class="text-center">{{ ejecutado_porcentaje }}%</td>
                     </tr>
                     </tbody>
                     <tfoot class="font-12px font-color-azul">
