--- a/core/templates/inversionpiechart.html
+++ b/core/templates/inversionpiechart.html
@@ -648,10 +648,10 @@
                         {% for row in anuales %}
                             <li>
                                 <a href="#0" data-date="01/01/{{ row.inversion__anio }} 00:00"
-                                    {% if row.inversion__anio == year|add:"0" %} class="selected" {% endif %}
+                                        {% if row.inversion__anio == year|add:"0" %} class="selected" {% endif %}
                                    style="left:{{ forloop.counter|mul:"135" }}px;"><span
-                                    class="posicion">{{ row.inversion__anio }}</span>
-                                <br/>
+                                        class="posicion">{{ row.inversion__anio }}</span>
+                                    <br/>
                                     {% if row.inversion__periodo == 'I' %}
                                         <span class="line-cifra">{{ row.asignado|million|intcomma }}</span>
                                     {% else %}
@@ -721,12 +721,14 @@
                         <tr>
                             <td class="text-left">{{ key }}</td>
                             {% for year in year_list %}
-                                <td class="text-center {% if forloop.counter|divisibleby:2 %} background-color-white {% else %} background-color-gray {% endif %}">
-                                    {{ data|keyvalue:year|million|intcomma }}
-                                </td>
-                                <td class="text-center {% if forloop.counter|divisibleby:2 %} background-color-white {% else %} background-color-gray {% endif %}">
-
-                                </td>
+                                {% with year_data=data|keyvalue:year %}
+                                    <td class="text-center {% if forloop.counter|divisibleby:2 %} background-color-white {% else %} background-color-gray {% endif %}">
+                                        {{ year_data.raw|million|intcomma }}
+                                    </td>
+                                    <td class="text-center {% if forloop.counter|divisibleby:2 %} background-color-white {% else %} background-color-gray {% endif %}">
+                                        {{ year_data.percent|default:"0%" }}
+                                    </td>
+                                {% endwith %}
                             {% endfor %}
                         </tr>
                     {% endfor %}
