--- a/core/templates/inversionpiechart.html
+++ b/core/templates/inversionpiechart.html
@@ -79,7 +79,7 @@
                             <div id="bar" class="view-alternative"> Chart will be rendered here</div>
                         </div>
                         <div class="tab-pane" id="table_">
-                            <table class="table table-striped table-hover">
+                            <table class="table table-bordered table-striped table-hover">
                                 <thead>
                                 <tr class="bg-primary">
                                     <th rowspan="2" colspan="1">Clasificaci&oacute;n</th>
@@ -333,7 +333,7 @@
             <div id="detail-1" class="container">
                 <div class="row">
                     <div class="col-md-offset-3 col-md-6 table-responsive">
-                        <table class="table table-condensed table-striped pma-bg-white">
+                        <table class="table table-bordered table-condensed table-striped pma-bg-white">
                             <thead class="thead-inverse">
                             <tr class="bg-primary">
                                 <th class="text-center">
@@ -425,7 +425,7 @@
         </div>
         <div class="row">
             <div class="col-md-offset-2 col-md-9">
-                <table class="table table-condensed table-striped">
+                <table class="table table-bordered table-condensed table-striped">
                     <thead>
                     <tr class="bg-primary">
                         <th colspan="1" rowspan="2">Rubros de inversi&oacute;n</th>
@@ -449,7 +449,7 @@
                             <td class="text-center">{{ row.inicial_asignado|million|intcomma }}</td>
                             <td class="text-center">{{ row.ini_asig_porcentaje }}%</td>
                             <td class="text-center">{{ row.actualizado_asignado|million|intcomma }}</td>
-                            <td class="text-center">{{ row.act_porcentaje }}</td>
+                            <td class="text-center">{{ row.act_porcentaje }}%</td>
                             <td class="text-center">
                                 {% if row.final_ejecutado %}
                                     {{ row.final_ejecutado|million|intcomma }}
@@ -490,7 +490,7 @@
         </div>
         <div id="detail-2" class="row">
             <div class="col-md-12">
-                <table class="table table-condensed table-striped">
+                <table class="table table-bordered  table-condensed table-striped">
                     <thead>
                     <tr class="bg-primary">
                         <td colspan="2"></td>
