ajuste de color en slider

--- a/core/static/css/pma.css
+++ b/core/static/css/pma.css
@@ -91,15 +91,15 @@ table td {
 .pma-gradient {
     color: #fff;
     /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#2b7ab3+0,00a7b2+100 */
-    background: rgb(43, 122, 179);
+    background: #48a1b1;
     /* Old browsers */
-    background: -moz-linear-gradient(-45deg, rgba(43, 122, 179, 1) 0%, rgba(0, 167, 178, 1) 80%);
+    #background: -moz-linear-gradient(-45deg, rgba(43, 122, 179, 1) 0%, rgba(0, 167, 178, 1) 80%);
     /* FF3.6-15 */
-    background: -webkit-linear-gradient(-45deg, rgba(43, 122, 179, 1) 0%, rgba(0, 167, 178, 1) 80%);
+    #background: -webkit-linear-gradient(-45deg, rgba(43, 122, 179, 1) 0%, rgba(0, 167, 178, 1) 80%);
     /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(135deg, rgba(43, 122, 179, 1) 0%, rgba(0, 167, 178, 1) 80%);
+    #background: linear-gradient(135deg, rgba(43, 122, 179, 1) 0%, rgba(0, 167, 178, 1) 80%);
     /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#2b7ab3', endColorstr='#00a7b2', GradientType=1);
+    #filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#2b7ab3', endColorstr='#00a7b2', GradientType=1);
     /* IE6-9 fallback on horizontal gradient */
 }
 .pma-gradient table{
