agregando clases css para ocultar borde derecho y/o izquierdo

--- a/core/static/css/own.css
+++ b/core/static/css/own.css
@@ -72,6 +72,13 @@
     border-bottom: none !important;
 }
 
+.no-border-right {
+    border-right: none !important;
+}
+.no-border-left {
+    border-left: none !important;
+}
+
 .border-sides {
     border-left: 1px solid #ddd;
     border-right: 1px solid #ddd;
