--- a/core/templates/inversionpiechart.html
+++ b/core/templates/inversionpiechart.html
@@ -90,10 +90,10 @@
                                     {% endif %}
                                 </tr>
                                 <tr class="bg-primary">
-                                    <th rowspan="1" colspan="1" class="text-center no-border-top">M. de
+                                    <th rowspan="1" colspan="1" class="text-center no-border-top no-border-right">M. de
                                         C&oacute;rdobas
                                     </th>
-                                    <th rowspan="1" colspan="1" class="text-center no-border-top">%</th>
+                                    <th rowspan="1" colspan="1" class="text-center no-border-top no-border-left">%</th>
                                 </tr>
                                 </thead>
                                 <tbody>
@@ -214,7 +214,7 @@
             <div class="container" id="detail-1">
                 <div class="row">
                     <div class="col-md-offset-4 col-md-4 table-responsive">
-                        <table class="table">
+                        <table class="table table-bordered">
                             <thead>
                             <tr class="blanco pma-bg-blue">
                                 <th>Categor&iacute;a de municipio</th>
@@ -251,7 +251,7 @@
                             </tr>
                             </tbody>
                             <tfoot class="font-12px font-color-azul">
-                            <th colspan="{{ year_list|length }}" rowspan="1" class="text-justify">
+                            <th colspan="{{ year_list|length }}" rowspan="1" class="text-justify pma-bg-white">
                                 <strong>Fuente: </strong>Elaboraci&oacute;n
                                 propia a partir
                                 de transmunic.gob.ni<strong>.</strong></th>
@@ -356,9 +356,9 @@
                                         <td class="text-center"> {{ forloop.counter }} </td>
                                         <td>{{ row.inversion__municipio__nombre }}</td>
                                         {% if row.inversion__periodo == 'I' %}
-                                            <td class="text-right">{{ row.asignado_percent|intcomma }}</td>
+                                            <td class="text-center">{{ row.asignado_percent|intcomma }}</td>
                                         {% else %}
-                                            <td class="text-right">{{ row.ejecutado_percent|intcomma }}</td>
+                                            <td class="text-center">{{ row.ejecutado_percent|intcomma }}</td>
                                         {% endif %}
                                     </tr>
                                 {% endfor %}
@@ -368,9 +368,9 @@
                                         <td class="text-center"> {{ forloop.counter }} </td>
                                         <td>{{ row.inversion__municipio__nombre }}</td>
                                         {% if row.ingreso__periodo == 'I' %}
-                                            <td class="text-right">{{ row.asignado_percent|intcomma }}</td>
+                                            <td class="text-center">{{ row.asignado_percent|intcomma }}</td>
                                         {% else %}
-                                            <td class="text-right">{{ row.ejecutado_percent|intcomma }}</td>
+                                            <td class="text-center">{{ row.ejecutado_percent|intcomma }}</td>
                                         {% endif %}
                                     </tr>
                                 {% endfor %}
@@ -434,12 +434,12 @@
                         <th colspan="2" rowspan="1" class="text-center no-border-bottom">Modificaci&oacute;n</th>
                     </tr>
                     <tr class="bg-primary">
-                        <th colspan="1" rowspan="1" class="text-center no-border-top">M. de C&oacute;rdobas</th>
-                        <th colspan="1" rowspan="1" class="text-center no-border-top">%</th>
-                        <th colspan="1" rowspan="1" class="text-center no-border-top">M. de C&oacute;rdobas</th>
-                        <th colspan="1" rowspan="1" class="text-center no-border-top">%</th>
-                        <th colspan="1" rowspan="1" class="text-center no-border-top">M. de C&oacute;rdobas</th>
-                        <th colspan="1" rowspan="1" class="text-center no-border-top">%</th>
+                        <th colspan="1" rowspan="1" class="text-center no-border-top no-border-right">M. de C&oacute;rdobas</th>
+                        <th colspan="1" rowspan="1" class="text-center no-border-top no-border-left">%</th>
+                        <th colspan="1" rowspan="1" class="text-center no-border-top no-border-right">M. de C&oacute;rdobas</th>
+                        <th colspan="1" rowspan="1" class="text-center no-border-top no-border-left">%</th>
+                        <th colspan="1" rowspan="1" class="text-center no-border-top no-border-right">M. de C&oacute;rdobas</th>
+                        <th colspan="1" rowspan="1" class="text-center no-border-top no-border-left">%</th>
                     </tr>
                     </thead>
                     <tbody>
