--- a/core/templates/_base.html
+++ b/core/templates/_base.html
@@ -13,7 +13,7 @@
     <!-- CSS de Bootstrap -->
     <link rel="stylesheet" href="{% static 'css/reset.css' %}">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/bootstrap-theme.css' %}">
+    <link rel="stylesheet" href="{% static 'css/bootstrap-theme.min.css' %}">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/css/select2.min.css" rel="stylesheet"/>
     <link rel="stylesheet" href="{% static 'css/pma.css' %}">
     <link rel="stylesheet" href="{% static 'css/pma-icon.css' %}">
@@ -183,7 +183,7 @@
     <!--
     <script src="http://code.jquery.com/jquery.js"></script>
     -->
-    <script src="{% static 'js/jquery-1.11.2.min.js' %}"></script>
+    <script src="{% static 'js/jquery.min.js' %}"></script>
 
     <!-- Todos los plugins JavaScript de Bootstrap (también puedes
          incluir archivos JavaScript individuales de los únicos
