--- a/core/templates/_index.html
+++ b/core/templates/_index.html
@@ -11,7 +11,7 @@
     <!-- CSS de Bootstrap -->
     <link rel="stylesheet" href="{% static 'css/reset.css' %}">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/bootstrap-theme.css' %}">
+    <link rel="stylesheet" href="{% static 'css/bootstrap-theme.min.css' %}">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/css/select2.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="{% static 'css/pma.css' %}">
     <link rel="stylesheet" href="{% static 'css/pma-icon.css' %}">
