--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -30,7 +30,8 @@
     <link href="{% static 'css/carousel.css' %}" rel="stylesheet">
     <link href="{% static 'css/custom.css' %}" rel="stylesheet">
     <link href="{% static 'css/menu.css' %}" rel="stylesheet">
-    <script src="{% static 'jquery-1.11.2.min.js' %}"></script>
+    <link href="{% static 'css/own.css' %}" rel="stylesheet">
+    <script src="{% static 'js/jquery.min.js' %}"></script>
     <!-- <script src="{% static 'highcharts.js' %}"></script> -->
     <script src="{% static 'js/jquery.imagemapster.js' %}"></script>
 
