aplicando recomendacion en own.css y importer.py de stickler

--- a/core/static/css/own.css
+++ b/core/static/css/own.css
@@ -81,7 +81,7 @@
 .no-border-right {
     border-right: none !important;
 }
-.no-border-left {]
+.no-border-left {
     border-left: none !important;
 }
 
