--- a/core/templates/upload_excel.html
+++ b/core/templates/upload_excel.html
@@ -13,6 +13,7 @@
                         <i class="fa fa-download" aria-hidden="true"></i>
                     </h4>
 
+                    {{ form.table }}
                     <div class="form-group row">
                         <label for="" class="col-md-12 col-form-label">{{ form.municipio.label }}</label>
                         <div class="col-md-8">
