--- a/core/templates/reglon_ingreso.html
+++ b/core/templates/reglon_ingreso.html
@@ -6,10 +6,27 @@
                 <form action="." method="GET">
                     <div class="row">
                         {% csrf_token %}
+
                         <div class="col-lg-12 col-md-12 col-sm-12">
                             <h3>Ingresos</h3>
                         </div>
-                        <div class="col-lg-12 col-md-12 col-sm-12">
+
+                        <div class="col-lg-3 col-md-3 col-sm-3">
+                            <label for=""> {{ form.municipio.label }}</label>
+                            {{ form.municipio }}
+                        </div>
+
+                        <div class="col-lg-3 col-md-3 col-sm-3">
+                            <label for="">{{ form.year.label }}</label>
+                            {{ form.year }}
+                        </div>
+
+                        <div class="col-lg-3 col-md-3 col-sm-3">
+                            <label for="">{{ form.periodo.label }}</label>
+                            {{ form.periodo }}
+                        </div>
+
+                        <div class="col-lg-3 col-md-3 col-sm-3" style="margin-top: 1.7em">
                             <input type="submit" value="Submit" class="btn btn-primary">
                         </div>
 
@@ -48,19 +65,19 @@
                                                             <td class="text-center">{{ forloop.counter }}</td>
                                                             <td>
                                                                 <input type="hidden"
-                                                                       name="reglon[{{ tipo_ingreso.tipo_ing_codigo }}][{{ forloop.counter0 }}][{{ reglon.codigo }}]"
+                                                                       name="reglon[{{ forloop.counter0 }}][codigo]"
                                                                        value="{{ reglon.codigo }}">
                                                                 {{ reglon.codigo }}
                                                             </td>
                                                             <td>{{ reglon.nombre }}</td>
                                                             <td>
                                                                 <input type="number" class="form-control"
-                                                                       name="reglon[{{ tipo_ingreso.tipo_ing_codigo }}][{{ forloop.counter0 }}][asignado]"
+                                                                       name="reglon[{{ forloop.counter0 }}][asignado]"
                                                                        value="">
                                                             </td>
                                                             <td>
                                                                 <input type="number" class="form-control"
-                                                                       name="reglon[{{ tipo_ingreso.tipo_ing_codigo }}][{{ forloop.counter0 }}][ejecutado]"
+                                                                       name="reglon[{{ forloop.counter0 }}][ejecutado]"
                                                                        value="">
                                                             </td>
                                                         </tr>
