incluyendo ranking_municipio.html en ogm_chart.hmtl

--- a/core/templates/ogm_chart.html
+++ b/core/templates/ogm_chart.html
@@ -284,6 +284,9 @@
                     </div>
                 </div>
             </div>
+
+            {% include 'ranking_municipio.html' %}
+
             <div class="timeline container rankin">
                 <div class="events-wrapper">
                     <div class="events" style="width: {{ otros|length|mul:130 }}px;">
